export interface User {
	userId: string;
}

export interface UserCreation {
	name: string;
	firstName: string;
	address: string;
	email: string;
	phone: string;
	password: string;
	passwordValidation: string;
}
